--- a/ecomprj/templates/core/profile_user.html
+++ b/ecomprj/templates/core/profile_user.html
@@ -23,11 +23,11 @@
                 </div>
                 <br>
                 <br>
-                <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Orders</a>
+                <a href="{% url 'core:customer_order' %}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Orders</a>
                 &nbsp;
                 &nbsp;
                 &nbsp;
-                <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Cart</a>
+                <a href="{% url 'core:cart' %}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Cart</a>
             </div>
             <br>
             <br>
