order cancel and order list

--- a/ecomprj/templates/core/checkout.html
+++ b/ecomprj/templates/core/checkout.html
@@ -51,7 +51,7 @@
 
                 
                         <div class="col-lg-6 col-12">
-                            <form id="order-form" action="{%  url 'core:placeorder' %}" method="post">
+                            <form id="order-form" action="{%  url 'core:place_order' %}" method="post">
                                 {% csrf_token %}
                                 <div class="checkbox-form">
                                     <h3>Billing Details</h3>
