--- a/ecomprj/templates/core/order_details.html
+++ b/ecomprj/templates/core/order_details.html
@@ -32,8 +32,8 @@
                   <p class="text-muted mb-0"> <span class="fw-bold text-body"> {{ product.address.address_1 }} {{ product.address.address_2 }}</span> </p>
                   <p class="text-muted mb-0"> <span class="fw-bold text-body"> {{ product.address.state }} {{ product.address.country }}</span> </p>
                   <p class="text-muted mb-0"> <span class="fw-bold text-body"> {{ product.address.city }} {{ product.address.pin }}</span> </p>
-                  <p class="text-muted mb-0"> <span class="fw-bold text-body">PIN {{ product.address.pin}}</span> </p>
-                  <p class="text-muted mb-0"> <span class="fw-bold text-body">Phone {{ product.address.phone}}</span> </p>
+                  <p class="text-muted mb-0"> <span class="fw-bold text-body">PIN: {{ product.address.pin}}</span> </p>
+                  <p class="text-muted mb-0"> <span class="fw-bold text-body">Phone: {{ product.user.ph_no }}</span> </p>
                 </div>
                 <div>
                   <img class="align-self-center img-fluid ml-100"
