order function finish 2ndwe

--- a/ecomprj/templates/adminside/add_categories.html
+++ b/ecomprj/templates/adminside/add_categories.html
@@ -40,13 +40,13 @@
                         pattern="^\S(.*\S)?$"
                         required>
                     </div>
-                    <div class="form-group">
+                    {% comment %} <div class="form-group">
                         <label>Offer</label>
                         <input class="form-control" type="number" 
                                placeholder="Offer "
                                name="offer"
                                min="0">
-                    </div>
+                    </div> {% endcomment %}
                     <div class="form-group">
                         <label>Add image</label>
                         <div>
