--- a/ecomprj/templates/adminside/orders.html
+++ b/ecomprj/templates/adminside/orders.html
@@ -16,22 +16,24 @@
             {% endfor %}
             {% endif %} 
 	</div>
+
+    
 	<div class="row">
 		<div class="col-md-12 pr-2">
 			<div class="table-responsive">
 				<table class="table table-striped custom-table">
 					<thead>
 						<tr>
-							<th scope="col" class="text-center">Username</th>
-							<th scope="col" class="text-center">Order Id</th>
-                            <th scope="col" class="text-center">Image</th>
-							<th scope="col" class="text-center">Quantity</th>
-							<th scope="col" class="text-center">Amount</th>
-                            <th scope="col" class="text-center">Address</th>
-							<th scope="col" class="text-center">Payment Type</th>
-                            <th scope="col" class="text-center">Date</th>
+							<th scope="col">Username</th>
+							<th scope="col">Order Id</th>
+                            <th scope="col">Image</th>
+							<th scope="col">Quantity</th>
+							<th scope="col">Amount</th>
+                            <th scope="col">Address</th>
+							<th scope="col">Payment Type</th>
+                            <th scope="col">Date</th>
 
-							<th scope="col" class="text-center">Status</th>
+							<th scope="col">Status</th>
 						</tr>
 					</thead>
 
