--- a/ecomprj/templates/adminside/update_main_categories.html
+++ b/ecomprj/templates/adminside/update_main_categories.html
@@ -45,7 +45,7 @@
                         value="{{ data.descriptions }}"
                         required>
                     </div>
-                    <div class="form-group">
+                    {% comment %} <div class="form-group">
                         <label>Offer</label>
                         <input class="form-control" type="number" 
                                placeholder="Offer"
@@ -53,7 +53,7 @@
                                value="{{data.offer}}"
                                min = 0
                                 >
-                    </div>
+                    </div> {% endcomment %}
                     <div class="form-group">
                         <label>Current Image</label>
                         <br>
