--- a/ecomprj/templates/core/product_details.html
+++ b/ecomprj/templates/core/product_details.html
@@ -185,7 +185,7 @@
                            
                                 <tr>
                                     <td><strong>Offer price</strong></td>
-                                    <td>{{ product.discounted_price }} %</td>
+                                    <td>{{ discounted_price }} %Off</td>
                                 </tr>
                                 <tr>
                                     <td><strong>Color</strong></td>
