--- a/ecomprj/templates/core/user_categories.html
+++ b/ecomprj/templates/core/user_categories.html
@@ -61,7 +61,7 @@
                         <p>No image available</p>
                         {% endif %}
                         <p class="card-text">{{ category.descriptions }}</p>
-                        <p class="card-text">Offer: {{ category.offer }}</p>
+                        {% comment %} <p class="card-text">Offer: {{ category.offer }}</p> {% endcomment %}
                     </div>
                 </div>
             </div>
