--- a/ecomprj/templates/adminside/update_product.html
+++ b/ecomprj/templates/adminside/update_product.html
@@ -129,6 +129,7 @@
                                        name="offer"
                                        value="{{product.offer}}"
                                        min = 0
+                                       max = 80
                                         >
                             </div>
 
