--- a/ecomprj/templates/adminside/coupon.html
+++ b/ecomprj/templates/adminside/coupon.html
@@ -33,8 +33,8 @@
                         {% for coupon in coupons %}
                         <tr>  
                             <td>{{ coupon.coupon_code }}</td>
-                            <td>{{ coupon.discount_price }}</td>
-                            <td>{{ coupon.minimum_amount }}</td>
+                            <td>{{ coupon.discount_amount }}</td>
+                            <td>{{ coupon.min_amount }}</td>
                             <td>{{ coupon.status }}</td>
                         </tr> 
                         {% endfor %}
@@ -86,6 +86,10 @@
 </form>
 </div>
 </div>      
+<!-- Add these lines before the closing </body> tag in your HTML template -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 
 
 {% endblock %}
